tooling/nargo_cli/tests/snapshots/execution_success/nested_dyn_array_regression_5782/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(mut array: [Field; 2], i: u32) {
    assert(array[i - 1] == 5);
    assert(array[i] == 10);
    array[i] = 2;
    let array2: [[Field; 2]; 2] = [array, array];
    assert(array2[0][0] == 5);
    assert(array2[0][i] == 2);
    assert(array2[i][0] == 5);
    assert(array2[i][i] == 2);
}
